Added a lot of films and removed a couple due to rights complaints from Twitch. I'm trying to only use films from this list: https://archive.org/details/feature_films?tab=collection&page=2&and%5B%5D=subject%3A%22sci-fi%22&and%5B%5D=subject%3A%22Sci-Fi%22&and%5B%5D=subject%3A%22sci+fi%22&and%5B%5D=subject%3A%22scifi%22 that are marked as Public Domain
Video duration stuff added
Shuffle data on load
Moved curtain up and background to bottom of element so it always lines up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <div id="info">
+      <dl>
+        <dt>Title:</dt>
+        <dd id="title"></dd>
+        <dt>Duration:</dt>
+        <dd>
+          <span id="timestamp"></span>
+          <span id="duration"></span>
+        </dd>
+        <dt>Description:</dt>
+        <dd id="description"></dd>
+        <dt>Year:</dt>
+        <dd id="year"></dd>
+      </dl>
+    </div>
     <a href="#" id="play">play</a>
     <a href="#" id="stop">stop</a>
     <a href="#" id="next">next</a>
